about page alignment bug fix, margin error

--- a/src/components/pages/about/About.css
+++ b/src/components/pages/about/About.css
@@ -122,7 +122,7 @@
     }
     .about-container .individual-about {
         position: relative;
-        right: 2% !important;
+        right: 2%;
     }
 }
 /* @media screen and (min-width: 850px) and (max-width: 1250px) and (orientation: landscape){
@@ -175,9 +175,9 @@
         justify-content: center !important;
         align-items: center !important;
         height: 650px;
-        margin-left: 0% !important;
+        /* margin-left: 0% !important; */
         position: relative;
-        right: 0% !important;
+        /* right: 0% !important; */
     }
     .about-container .move-it-homepage-img {
         width: 60% !important;
@@ -190,6 +190,7 @@
         margin: 0vh 2% 2% 12% !important;
         min-height: 250px;
         min-width: 150px;
+        position: relative;
     }
     .about-container .left .project-text{
         margin-right: 0vh;
@@ -201,14 +202,17 @@
         height: 350px;
         width: 90%;
         font-size: 16px;
-        margin-top: 0px !important;
+        margin-top: 30px !important;
         margin-bottom: 5% !important;
         line-height: 16px;
         justify-content: center;
     }
     .projects-container .individual-about{
-        height: 510px !important;
-        margin-top: 30px;
+        height: 500px !important;
+        margin-top: 50px;
+        left: 0 !important;
+        right: 0;
+        margin: 10% auto 3% auto;
     }
     .about-container .projects-container {
         margin: 0 0 0 0 !important;
@@ -217,7 +221,7 @@
 
 @media screen and (max-width: 400px) {
     .about-container .individual-about{
-        height: 625px;
+        height: 550px !important;
     }
 }
 
